--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bluestyle.css">
-    <title>Hello world</title>
+<title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <h3>Hello git im in your folder</h3>
+
+<h1>Hello world!</h1>
+<div><img src="img_hello_world.jpeg" alt="Hello World from Space"
+style="width:100%;max-width:960px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+
 </body>
 </html>
